--- a/exam/src/css/index.css
+++ b/exam/src/css/index.css
@@ -68,18 +68,51 @@ section {
     border-bottom: 2px solid red; }
 
 .wrapper {
-  margin-top: .1rem; }
+  margin-top: .3rem; }
   .wrapper .conntainer {
     width: 100%;
     height: auto;
     display: flex;
-    flex-wrap: wrap; }
+    flex-wrap: wrap;
+    margin-top: .3rem; }
     .wrapper .conntainer dl {
       width: 40%;
       height: auto;
       display: flex;
       justify-content: space-between;
       flex-direction: column; }
+
+.top {
+  width: 100%;
+  height: 0.3rem;
+  background: #ccc;
+  text-align: center;
+  position: fixed;
+  top: -.5rem; }
+  .top img {
+    width: 0.2rem;
+    height: auto;
+    vertical-align: middle; }
+
+.main {
+  width: 100%;
+  height: 0.3rem;
+  background: #ccc;
+  text-align: center;
+  line-height: .3rem;
+  display: none; }
+
+.bottom {
+  width: 100%;
+  height: 0.3rem;
+  background: #ccc;
+  text-align: center;
+  position: fixed;
+  bottom: -.5rem; }
+  .bottom img {
+    width: 0.2rem;
+    height: auto;
+    vertical-align: middle; }
 
 footer {
   width: 100%;
