--- a/exam/src/css/index.css
+++ b/exam/src/css/index.css
@@ -68,7 +68,10 @@ section {
     border-bottom: 2px solid red; }
 
 .wrapper {
-  margin-top: .3rem; }
+  margin-top: .3rem;
+  width: 100%;
+  height: 4rem;
+  overflow: hidden; }
   .wrapper .conntainer {
     width: 100%;
     height: auto;
@@ -80,7 +83,8 @@ section {
       height: auto;
       display: flex;
       justify-content: space-between;
-      flex-direction: column; }
+      flex-direction: column;
+      margin-left: .1rem; }
 
 .top {
   width: 100%;
